--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,7 @@ provider:
 resources:
   Resources:
     AuctionsTable: ${file(resources/AuctionsTable.yml):AuctionsTable}
-    
+
 functions:
   createAuction:
     handler: src/handlers/createAuction.handler
@@ -48,6 +48,11 @@ functions:
       - http:
           method: PATCH
           path: /auction/{id}/bid
+
+  processAuctions:
+    handler: src/handlers/processAuctions.handler
+    # events:
+    #  - schedule: rate(1 minute)
 
 custom:
   AuctionsTable:
